--- a/src/ui/sass/app/view/implement/border.sass
+++ b/src/ui/sass/app/view/implement/border.sass
@@ -12,13 +12,14 @@
 .bd
     border-width: $bd
     @extend .__bd
-
 .bd-x1
     border-width: $bd-x1
     @extend .__bd
-    
 .bd-x2
     border-width: $bd-x2
+    @extend .__bd
+.bd-x3
+    border-width: $bd-x3
     @extend .__bd
 
 //
