--- a/src/ui/sass_tooi/wh/h.sass
+++ b/src/ui/sass_tooi/wh/h.sass
@@ -1,10 +1,12 @@
 
+.h-0
+    height: 0%
 .h-100
     height: 100%
     
 @function h($i)
-    @return $i * 1%
+    @return $i * 1vh
 
 @for $i from 0 through 100
-    .h-#{$i}
+    .h-#{$i}vh
         height: h($i)
