--- a/src/ui/sass/theme/define_element/button/button-def.sass
+++ b/src/ui/sass/theme/define_element/button/button-def.sass
@@ -29,6 +29,12 @@
     @extend .fx-hv-bg-def
     @extend .fx-fcs-bg-def
 
+.fx-aii-btn-bd-def
+    &:hover 
+        border-color: $def-hv
+    &:active, &:focus, &:focus-visible
+        border-color: $def-fcs
+
 .btn-def
     // @extend .fx-aii-btn-tit
     // @extend .c-btn-tit
