--- a/src/ui/sass/basic/button/index.sass
+++ b/src/ui/sass/basic/button/index.sass
@@ -34,3 +34,12 @@
     min-height: $h-btn
 .mh-btn-x1
     min-height: $h-btn-x1
+
+.btn-app
+    min-height: $h-btn
+    border-radius: 5em
+    width: 100%
+    display: flex
+    align-items: center
+    justify-content: center
+
