--- a/src/ui/sass/theme/define_status/__conf.sass
+++ b/src/ui/sass/theme/define_status/__conf.sass
@@ -14,3 +14,12 @@ $err-tih-fcs: #a51923
 
 $err-dot: #fc3f4c
 $err-dot-hv: #f53845
+
+$succ: #28e254
+$succ-hv: #28e254
+$succ-fcs: #28e254
+$succ-shd: #28e254
+
+$succ-bg: #e6fceb
+$succ-bg-hv: #e6fceb
+$succ-bg-fcs: #e6fceb
