--- a/src/ui/sass/theme/primary/implement/pri-background.sass
+++ b/src/ui/sass/theme/primary/implement/pri-background.sass
@@ -2,7 +2,7 @@
 @use '../__conf' as *
 
 .bg-pag-pri
-    background: $pri-pag-bg
+    background: $pri-pag-bg !important
 
 .bc-pag-pri
     border-color: $pri-pag-bg
