--- a/src/ui/sass_app/rewrite/form.sass
+++ b/src/ui/sass_app/rewrite/form.sass
@@ -10,3 +10,8 @@
         svg 
             width: 100%
             height: 100%
+
+.o-switch
+    .uni-switch-input-checked
+        border-color: $pri !important
+        background-color: $pri !important
