--- a/src/ui/sass_app/visual/ider.sass
+++ b/src/ui/sass_app/visual/ider.sass
@@ -2,5 +2,11 @@
 .sex-girl
     color: #f364bc
 
+.bc-sex-girl-deep
+    border-color: #f364bc
+
+.bg-sex-girl-iht
+    color: #fff7fc
+
 .sex-boy
     color: #3996e7
