--- a/src/ui/sass_tooi/bc/bg.sass
+++ b/src/ui/sass_tooi/bc/bg.sass
@@ -2,6 +2,9 @@
 .bg-000
     background-color:  #000
 
+.bg-028
+    background-color:  rgba(0, 0, 0, 0.28)
+
 .bg-fff
     background-color: #fff
 
