--- a/src/ui/sass_tooi/text/f-view.sass
+++ b/src/ui/sass_tooi/text/f-view.sass
@@ -24,3 +24,9 @@
 .tils-x2
     text-indent: 0.14rem
     letter-spacing: 0.28rem
+
+.eiies
+    line-clamp: 1 
+    overflow: hidden !important
+    white-space: nowrap !important
+    text-overflow: ellipsis !important
