--- a/src/ui/sass/theme/define_status/implement.sass
+++ b/src/ui/sass/theme/define_status/implement.sass
@@ -1,4 +1,5 @@
 
-@use './implement/err.sass'
-
+@use './implement/err'
+@use './implement/succ'
 @use './implement/button-err'
+@use './implement/button-succ'
