--- a/src/ui/sass/theme/define_element/__conf.sass
+++ b/src/ui/sass/theme/define_element/__conf.sass
@@ -22,5 +22,13 @@ $btn-wht: #fff
 $btn-wht-hv: $def
 $btn-wht-shd: rgba(255, 255, 255, 0.2)
 
+//
+$btn-bck: rgba(0, 0, 0, 0.24)
+$btn-bck-hv: rgba(0, 0, 0, 0.32)
+$btn-bck-shd: rgba(0, 0, 0, 0.08)
+
+$btn-bck-tit: rgba(255, 255, 255, 0.96)
+$btn-bck-tit-hv: rgba(255, 255, 255, 1)
+
 // line
 $hr: #e1e2e8
