--- a/src/ui/sass_tooi/distance/padding-stone.sass
+++ b/src/ui/sass_tooi/distance/padding-stone.sass
@@ -5,3 +5,18 @@
         padding-left: #{$i}em
     .pi-#{$i}em
         padding-right: #{$i}em
+
+.pt-02rem
+    padding-top: 0.2rem
+.pb-05rem
+    padding-bottom: 0.2rem
+
+.pt-05rem
+    padding-top: 0.5rem
+.pb-05rem
+    padding-bottom: 0.5rem
+    
+.pt-10rem
+    padding-top: 1rem
+.pb-10rem
+    padding-bottom: 1rem
