--- a/src/ui/sass/theme/define_element/__conf.sass
+++ b/src/ui/sass/theme/define_element/__conf.sass
@@ -1,15 +1,15 @@
 
 $def: #f2f4f7
-$def-hv: #f0f2f5
-$def-fcs: #e9eaee
+$def-hv: #eceff2 // #f0f2f5
+$def-fcs: #e9ebee // #e9eaee
 // shadow
 $def-shd: #e9eaee39
 // 阴影
 $def-sdo: #e9eaee5c
 
-$def-s: #f8fafd // #f6f8fb
-$def-s-hv: #f6f8fb
-$def-s-fcs: #f2f4f7
+$def-s: #fafbfd // #f8fafd
+$def-s-hv: #f6f7f9 // #f6f8fb
+$def-s-fcs: #f2f4f7 // #f2f4f7
 // shadow
 $def-s-shd: #e9eaee22
 // 阴影
