--- a/src/ui/sass/theme/primary/__conf.sass
+++ b/src/ui/sass/theme/primary/__conf.sass
@@ -8,11 +8,11 @@ $pri-shd: #7bf2f236
 $pri-sdo: #0f141431
     
 // 轻色
-$pri-iht: #e3fefe
-$pri-iht-hv: #dcfdfd
-$pri-iht-fcs: #d8f8f8 // #dbffff
+$pri-iht: #ddfcfe67
+$pri-iht-hv: #ddfcfe73
+$pri-iht-fcs: #ddfcfe94 // #dbffff
 // shadow
-$pri-iht-shd: #e7ffff8f
+$pri-iht-shd: #e7ffff62
 
 // 主题深色
 $pri-deep: #141414 // #080f0f
