--- a/src/ui/sass/theme/define_element/implement.sass
+++ b/src/ui/sass/theme/define_element/implement.sass
@@ -1,3 +1,4 @@
+@use './__conf' as *
 
 .btn-blue
     color: #2789df
@@ -6,3 +7,8 @@
 .btn-pink
     color: #de4d98
     background: #fee7f3
+
+.bg-def-hv
+    background: $def-hv
+.bg-def-fcs
+    background: $def-fcs
