--- a/src/ui/sass/theme/define_txt/__conf.sass
+++ b/src/ui/sass/theme/define_txt/__conf.sass
@@ -20,11 +20,11 @@ $sus: #bfbfbf // #bfbfbf
 $sus-fcs: #acacac
     
 
-$hih: #262729
-$hih-fcs: #1d1e1f
+$coh: #262729
+$coh-fcs: #1d1e1f
 
-$his: #6b6d73
-$his-fcs: #5a5d63
+$cos: #818386
+$cos-fcs: #797b7e
 
 $cod-tit: #262729
 $cod-tid: #6f7275
