--- a/src/ui/sass/theme/define_txt/implement.sass
+++ b/src/ui/sass/theme/define_txt/implement.sass
@@ -56,17 +56,17 @@
     &:hover, &:active, &:focus, &:focus-visible
         color: $sus-fcs !important
 //
-.hih
-    color: $hih
+.coh
+    color: $coh
     &:hover, &:active, &:focus, &:focus-visible
-        color: $hih-fcs
-.his
-    color: $his
+        color: $coh-fcs
+.cos
+    color: $cos
     &:hover, &:active, &:focus, &:focus-visible
-        color: $his-fcs
+        color: $cos-fcs
 
-.hih-imp
-    color: $hih !important
+.coh-imp
+    color: $coh !important
     
 .cod-tit
     color: $cod-tit
