--- a/src/ui/sass_app/visual/ider.sass
+++ b/src/ui/sass_app/visual/ider.sass
@@ -10,3 +10,17 @@
 
 .sex-boy
     color: #369df7
+
+.btn-sex-boy,
+.btn-sex-girl
+    .__btn-sex
+        color: #fff
+        font-size: 0.76em
+
+.btn-sex-boy
+    background: #369df7
+.btn-sex-girl
+    border-radius: 100%
+    background: #fd78bd
+    width: 1em
+    height: 1em
