--- a/src/ui/sass/app/font/__conf.sass
+++ b/src/ui/sass/app/font/__conf.sass
@@ -1,9 +1,9 @@
 
 $h1: 2.56rem
 $h2: 2.20rem
-$h3: 1.88rem 
-$h4: 1.60rem 
-$h5: 1.36rem
+$h3: 1.64rem 
+$h4: 1.327rem 
+$h5: 1.242rem // 1.36rem
 $h6: 1.16rem
 $h7: 1.12rem
 $h8: 1.082rem
