--- a/src/ui/sass/theme/define_element/button/button-bck.sass
+++ b/src/ui/sass/theme/define_element/button/button-bck.sass
@@ -26,10 +26,10 @@
     &:active, &:focus, &:focus-visible
         color: $btn-bck-tit-hv
 
-
 .btn-bck
     border-color: $btn-bck
     background: transparent
+    border-color: transparent
     background: $btn-bck
     @extend .fx-c-btn-bck
     @extend .fx-aii-btn-bck
