--- a/src/ui/sass/theme/define_txt/__conf.sass
+++ b/src/ui/sass/theme/define_txt/__conf.sass
@@ -1,13 +1,13 @@
 
 // 主文字颜色
 
-$tih: #000
+$tih: #121212 // #000
 $tih-fcs: #000
     
-$tit: #121212
-$tit-fcs: #080808
+$tit: #212121 // #121212
+$tit-fcs: #121212
     
-$tid: #424242
+$tid: #3f3f3f // #424242
 $tid-fcs: #3c3c3c
 
 $tiw: #696969
