--- a/src/ui/sass/theme/primary/__conf.sass
+++ b/src/ui/sass/theme/primary/__conf.sass
@@ -1,7 +1,7 @@
 // 主色
-$pri: #15bcc8  // #15bcc8 // #13c2c2
-$pri-hv: #13b5c1
-$pri-fcs: #11acb8
+$pri: #15bfcb  // #15bcc8 // #13c2c2
+$pri-hv: #14bdc9
+$pri-fcs: #13b6c2
 // shadow
 $pri-shd: #7bf2f236
 // 阴影
