--- a/src/ui/sass/theme/define_element/button/button-def.sass
+++ b/src/ui/sass/theme/define_element/button/button-def.sass
@@ -9,6 +9,12 @@
 .bg-def-fcs
     background: $def-fcs
 
+.bc-def
+    border-color: $def
+    &:active, &:focus, &:focus-visible
+        border-color: $def
+
+
 .fx-hv-bg-def:hover
     @extend .bg-def-hv
 .fx-fcs-bg-def
