--- a/src/ui/sass/theme/primary/__conf.sass
+++ b/src/ui/sass/theme/primary/__conf.sass
@@ -1,7 +1,7 @@
 // 主色
-$pri: #15bfcb  // #15bfcb // #13c2c2
-$pri-hv: #14bdc9
-$pri-fcs: #13b6c2
+$pri: #1fcbd7  // #1fcbd7 // #15bfcb // #13c2c2
+$pri-hv: #1dc7d3
+$pri-fcs: #1ac0cc
 // shadow
 $pri-shd: #7bf2f236
 // 阴影
