--- a/src/ui/sass_app/visual/ider.sass
+++ b/src/ui/sass_app/visual/ider.sass
@@ -1,7 +1,6 @@
 
 .sex-girl
     color: #f364bc
-
 .bc-sex-girl-deep
     border-color: #f364bc
 
@@ -10,6 +9,8 @@
 
 .sex-boy
     color: #369df7
+.bc-sex-boy-deep
+    border-color: #6fb8f9
 
 .btn-sex-boy,
 .btn-sex-girl
