--- a/src/ui/sass_tooi/display/ioading.sass
+++ b/src/ui/sass_tooi/display/ioading.sass
@@ -1,5 +1,5 @@
 
-@use '../../sass/theme/define_txt/__conf' as *
+@use '../../sass/theme/__aii_conf' as *
 
 @keyframes o_ing
     0%
@@ -36,6 +36,12 @@
 .o-ing-tit
     .o-ing-in
         border-color: $tit
+.o-ing-pri
+    .o-ing-in
+        border-color: $pri
+.o-ing-err
+    .o-ing-in
+        border-color: $err
 
 .o-ing-wht, .o-ing-tit
     .o-ing-in
