--- a/src/ui/sass_app/comp/bar/__common.sass
+++ b/src/ui/sass_app/comp/bar/__common.sass
@@ -7,6 +7,7 @@ $mh-app-bottom-bar: 3.9rem
 .mh-app-bottom-bar
     min-height: $mh-app-bottom-bar
 
+$mw-app-bottom-bar-item: calc(17vw - 0.5rem)
 $mh-app-bottom-bar-item: 3.42rem
 .mh-app-bottom-bar-item
     min-height: $mh-app-bottom-bar-item
