--- a/src/ui/sass_app/comp/bar/bottom-bar.sass
+++ b/src/ui/sass_app/comp/bar/bottom-bar.sass
@@ -21,7 +21,7 @@ $abb-die-hv: #187e7e
 $abb-die-fcs: #187e7e
 
 .app-bottom-bar-item
-    width: $mh-app-bottom-bar-item
+    width: $mw-app-bottom-bar-item
     height: $mh-app-bottom-bar-item
     color: $abb-die
     &:hover
