--- a/src/ui/sass_app/visual/ider.sass
+++ b/src/ui/sass_app/visual/ider.sass
@@ -12,16 +12,15 @@
 .bc-sex-boy-deep
     border-color: #6fb8f9
 
-.btn-sex-boy,
-.btn-sex-girl
-    border-radius: 100%
-    width: 1em
-    height: 1em
+.btn-sex-boy, .btn-sex-girl
+    border-radius: 100% !important
+    width: 1em !important
+    height: 1em !important
     .__btn-sex
-        color: #fff
-        font-size: 0.76em
+        color: #fff !important
+        font-size: 0.76em !important
 
 .btn-sex-boy
-    background: #369df7
+    background: #369df7 !important
 .btn-sex-girl
-    background: #fd78bd
+    background: #fd78bd !important
