--- a/src/ui/sass/theme/define_element/__conf.sass
+++ b/src/ui/sass/theme/define_element/__conf.sass
@@ -18,9 +18,6 @@ $def-s-sdo: #e9eaee3e
 
 $btn-tit: #fff // #fff
 
-$btn-wht: #fff
-$btn-wht-hv: $def
-$btn-wht-shd: rgba(255, 255, 255, 0.2)
 
 //
 $btn-bck: rgba(0, 0, 0, 0.22)
@@ -33,3 +30,12 @@ $btn-bck-tit-hv: rgba(255, 255, 255, 1)
 // line
 $hr: #e1e2e8
 $hr-s: #ecedf0
+
+// wht 
+$btn-wht: rgba(255, 255, 255, 1)
+$btn-wht-hv: $def
+$btn-wht-shd: rgba(255, 255, 255, 0.2)
+
+$btn-wht-s: rgba(255, 255, 255, 0.4)
+
+$btn-wht-t: rgba(255, 255, 255, 0.18)
