--- a/src/ui/sass/theme/define_element/button/button-wht.sass
+++ b/src/ui/sass/theme/define_element/button/button-wht.sass
@@ -20,13 +20,20 @@
         background: $btn-wht-hv
 
 .btn-wht
-    border-color: #fff
+    border-color: $btn-wht
     background: transparent
-    background: #fff
+    background: $btn-wht
     @extend .fx-aii-btn-wht
 .btn-wht-s
-    background: rgba(255, 255, 255, 0.4)
+    background: $btn-wht-s
     backdrop-filter: blur(3px)
+    @extend .fx-aii-btn-wht
+    
+.bg-wht-t
+    background: $btn-wht-t
+.btn-wht-t
+    background: $btn-wht-t
+    backdrop-filter: blur(1px)
     @extend .fx-aii-btn-wht
 
 
