--- a/src/ui/sass/theme/acc/__conf.sass
+++ b/src/ui/sass/theme/acc/__conf.sass
@@ -1,17 +1,19 @@
 // 主色
-$acc: #f26da0 // #13c2c2
-$acc-hv: #ea6598
-$acc-fcs: #ea6598
+$acc: #f6672e // #13c2c2 // #f26da0
+$acc-hv: #ec612a
+$acc-fcs: #ec612a
 // shadow
-$acc-shd: #fca6c74c
+$acc-shd: #feb496ab
 // 阴影
-$acc-sdo: #241b1f3b
+$acc-sdo: #feb49680
     
 // 轻色
-$acc-iht: #fce8f0
-$acc-iht-hv: #f6dae5
-$acc-iht-fcs: #f6dae5 // #dbffff
+$acc-iht: #fff3ef
+$acc-iht-hv: #fdefeb
+$acc-iht-fcs: #f9eae4 // #dbffff
 // shadow
-$acc-iht-shd: #ffe6f02d
+$acc-iht-shd: #fff3efab
 
-
+// 文字
+$aoc: #f36c37
+$aoc-hv: #ed6934
