--- a/src/ui/sass/theme/define_element/__conf.sass
+++ b/src/ui/sass/theme/define_element/__conf.sass
@@ -31,11 +31,12 @@ $btn-bck-tit-hv: rgba(255, 255, 255, 1)
 $hr: #e1e2e8
 $hr-s: #ecedf0
 
+//
+$btn-wht-t: rgba(255, 255, 255, 0.18)
 // wht 
 $btn-wht: rgba(255, 255, 255, 1)
 $btn-wht-hv: $def
 $btn-wht-shd: rgba(255, 255, 255, 0.2)
 
 $btn-wht-s: rgba(255, 255, 255, 0.4)
-
-$btn-wht-t: rgba(255, 255, 255, 0.18)
+$btn-wht-s-hv: rgba(255, 255, 255, 1)
