--- a/src/ui/sass/theme/define_element/button/button-wht.sass
+++ b/src/ui/sass/theme/define_element/button/button-wht.sass
@@ -18,6 +18,14 @@
         background: $btn-wht-hv
     &:active, &:focus, &:focus-visible
         background: $btn-wht-hv
+        
+.fx-aii-btn-wht-s
+    @extend .fx-hv-shd-wht
+    @extend .fx-fcs-shd-wht
+    &:hover
+        background: $btn-wht-s
+    &:active, &:focus, &:focus-visible
+        background: $btn-wht-s
 
 .btn-wht
     border-color: $btn-wht
