--- a/prod/front/src/ui/sass/theme/define_element/__conf.sass
+++ b/prod/front/src/ui/sass/theme/define_element/__conf.sass
@@ -30,12 +30,14 @@ $btn-bck-tit-hv: rgba(255, 255, 255, 1)
 $hr: #e1e2e8
 $hr-s: #ecedf0
 
-//
-$btn-wht-t: rgba(255, 255, 255, 0.18)
 // wht 
 $btn-wht: rgba(255, 255, 255, 1)
 $btn-wht-hv: $def
 $btn-wht-shd: rgba(255, 255, 255, 0.2)
 
-$btn-wht-s: rgba(255, 255, 255, 0.4)
-$btn-wht-s-hv: rgba(255, 255, 255, 1)
+$btn-wht-s: rgba(255, 255, 255, 0.382)
+$btn-wht-s-hv: rgba(255, 255, 255, 0.92)
+
+    
+$btn-wht-t: rgba(255, 255, 255, 0.22)
+$btn-wht-t-hv: rgba(255, 255, 255, 0.4)
