--- a/prod/front/src/ui/sass_app/comp/bar/__common.sass
+++ b/prod/front/src/ui/sass_app/comp/bar/__common.sass
@@ -1,5 +1,5 @@
 
-$bg-app-bottom-bar: #fff
+$bg-app-bottom-bar: rgba(255, 255, 255, 0.2)
 .bg-app-bottom-bar
     background-color: $bg-app-bottom-bar
 
