--- a/prod/front/src/ui/sass_page/index/index.sass
+++ b/prod/front/src/ui/sass_page/index/index.sass
@@ -1,9 +1,12 @@
 
+@use '../../sass/theme/__aii_conf' as *
+
 .bg-index-top
     background: linear-gradient(to bottom,  
-    #75f5f9, 
-    #f2f4f7,
-    #f2f4f7)
+    #fff, // $pri-pag-bg, 
+    transparent, transparent
+    )
+    backdrop-filter: blur(7px)
 
 .bg-index-top-2
     background: linear-gradient(to bottom right,  
