--- a/prod/front/src/ui/sass_tooi/bc/bg.sass
+++ b/prod/front/src/ui/sass_tooi/bc/bg.sass
@@ -10,3 +10,8 @@
 
 .bg-ig-black-b
     background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4))
+
+.bf
+    backdrop-filter: blur(8px)
+.bf-s
+    backdrop-filter: blur(4px)
