--- a/prod/front/src/ui/sass/theme/define_txt/implement.sass
+++ b/prod/front/src/ui/sass/theme/define_txt/implement.sass
@@ -37,6 +37,15 @@
     color: $tiw !important
     &:hover, &:active, &:focus, &:focus-visible
         color: $tiw-fcs !important
+        
+.tin
+    color: $tiw
+    &:hover, &:active, &:focus, &:focus-visible
+        color: $tiw-fcs
+.tin-imp
+    color: $tin !important
+    &:hover, &:active, &:focus, &:focus-visible
+        color: $tin-fcs !important
 
 .tis
     color: $tis
