--- a/prod/front/src/ui/sass_tooi/bc/bg.sass
+++ b/prod/front/src/ui/sass_tooi/bc/bg.sass
@@ -11,6 +11,8 @@
 .bg-ig-black-b
     background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.4))
 
+.bf-x1
+    backdrop-filter: blur(12px)
 .bf
     backdrop-filter: blur(8px)
 .bf-s
