--- a/prod/front/src/ui/sass_tooi/bc/c.sass
+++ b/prod/front/src/ui/sass_tooi/bc/c.sass
@@ -1,3 +1,9 @@
 
 .c-fff
     color: #fff
+    
+.c-fff-s
+    color: rgba(255, 255, 255, 0.618)
+    
+.c-fff-t
+    color: rgba(255, 255, 255, 0.382)
